  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Reorder issue and merge request titles to show IDs first. !6503 (Greg Laubenstein)
  - Reduce queries needed to find users using their SSH keys when pushing commits
  - Prevent rendering the link to all when the author has no access (Katarzyna Kobierska Ula Budziszewska)
  - Fix broken repository 500 errors in project list
  - Fix Pipeline list commit column width should be adjusted
  - Close todos when accepting merge requests via the API !6486 (tonygambone)
  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer)
  - Retouch environments list and deployments list
  - Add Container Registry on/off status to Admin Area !6638 (the-undefined)
  - Grouped pipeline dropdown is a scrollable container
  - Cleanup Ci::ApplicationController. !6757 (Takuya Noguchi)
  - Fix a typo in doc/api/labels.md
  - API: all unknown routing will be handled with 404 Not Found

v 8.12.5 (unreleased)

v 8.12.4
  - Fix "Copy to clipboard" tooltip to say "Copied!" when clipboard button is clicked. !6294 (lukehowell)
  - Fix padding in build sidebar. !6506
  - Changed compare dropdowns to dropdowns with isolated search input. !6550
  - Fix race condition on LFS Token. !6592
  - Fix type mismatch bug when closing Jira issue. !6619
  - Fix lint-doc error. !6623
  - Skip wiki creation when GitHub project has wiki enabled. !6665
  - Fix issues importing services via Import/Export. !6667
  - Restrict failed login attempts for users with 2FA enabled. !6668
  - Fix failed project deletion when feature visibility set to private. !6688
  - Prevent claiming associated model IDs via import.
  - Set GitLab project exported file permissions to owner only